// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles unknown languages 1`] = `
<span
  title="cpp, Java"
>
  cpp, Java
</span>
`;

exports[`handles unknown languages 2`] = `
<span
  title="unknown, Java"
>
  unknown, Java
</span>
`;

exports[`renders 1`] = `
<span
  title="Java, JavaScript"
>
  Java, JavaScript
</span>
`;

exports[`sorts languages 1`] = `
<span
  title="JavaScript, Java"
>
  JavaScript, Java
</span>
`;
